Implement regenerate feature
